--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
-11
+
+playwright
+requests
+beautifulsoup4
+
+
+PyMuPDF
+openpyxl
+
+
+langchain
+openai
+dashscope
+erniebot
+chromadb
+pydantic
+tiktoken
+
+
+fastapi
+uvicorn
